Fixing frontend's design errors and adding docker compose to the project